[package]
name = "command-line-blackjack2"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "fs"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.5"
log = "0.4.21"
pretty_env_logger = "0.4"
rand = "0.8.5"
async-std = "1.10"